// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mailbox /> should not render unread messages 1`] = `
<div
  className="mailbox"
>
  <span
    className="mailbox__text"
  >
    Messages
  </span>
</div>
`;

exports[`<Mailbox /> should render count of unread messages 1`] = `
<div
  className="mailbox"
>
  <span
    className="mailbox__text"
  >
    Messages
  </span>
</div>
`;

exports[`<Mailbox /> should render count of unread messages: 4 1`] = `
<div
  className="mailbox"
>
  <span
    className="mailbox__text"
  >
    Messages
  </span>
  <span
    className="mailbox__count"
  >
    4
  </span>
</div>
`;
